--- a/Instructions/Labs/AZ-203_01_lab.md
+++ b/Instructions/Labs/AZ-203_01_lab.md
@@ -145,7 +145,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Open the **Controllers\\ImagesController.cs** file, and then observe the code in each of the methods.
 
-1.  Open the **Windows Terminal** application.
+1.  Open the Windows Terminal application.
 
 1.  Sign in to the Azure CLI by using your Azure credentials:
 
