--- a/Instructions/Labs/AZ-203_02_lab.md
+++ b/Instructions/Labs/AZ-203_02_lab.md
@@ -1,25 +1,25 @@
 ---
 lab:
-    title: 'Lab: Implement task processing logic using Azure Functions'
+    title: 'Lab: Implement task processing logic by using Azure Functions'
     module: 'Module 02: '
 ---
 
-# Lab: Implement task processing logic using Azure Functions 
+# Lab: Implement task processing logic by using Azure Functions 
 # Student lab manual
 
 ## Lab scenario
 
-Your company builds a desktop software utility that parses a local JSON file for its configuration settings. During the latest team meeting, your team has decided to reduce the amount of files distributed with your application by serving your default configuration settings from a URL instead of from a local file. As the new developer on the team, you have been tasked with evaluating Azure Functions as a solution to this problem.
+Your company is built a desktop software tool that parses a local JavaScript Object Notation (JSON) file for its configuration settings. During its latest meeting, your team decided to reduce the number of files that are distributed with your application by serving your default configuration settings from a URL instead of from a local file. As the new developer on the team, you've been tasked with evaluating Microsoft Azure Functions as a solution to this problem.
 
 ## Objectives
 
 After you complete this lab, you will be able to:
 
--   Create an Azure Function app
+-   Create a Functions app.
 
--   Create various functions using built-in triggers
+-   Create various functions by using built-in triggers.
 
--   Configure function app trigger and input integrations
+-   Configure function app triggers and input integrations.
 
 ## Lab setup
 
@@ -55,7 +55,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  If this is your first time signing in to the Azure portal, you'll notice a dialog box offering a tour of the portal. Select **Get Started** to skip the tour.
 
-#### Task 2: Create a Storage account
+#### Task 2: Create an Azure Storage account
 
 1.  Create a new storage account with the following details:
     
@@ -75,7 +75,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     > **Note**: Wait for Azure to finish creating the storage account before you move forward with the lab. You'll receive a notification when the account is created.
 
-#### Task 3: Create an Azure Functions app
+#### Task 3: Create a Functions app
 
 1.  Create a new function app with the following details:
 
@@ -85,7 +85,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     -	Publish: **Code**
 
-    -	Runtime Stack: **.NET**
+    -	Runtime stack: **.NET**
 
     -	Region: **East US**
 
@@ -103,9 +103,9 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 In this exercise, you created all the resources that you'll use for this lab.
 
-### Exercise 2: Create a function that is triggered by a HTTP request
+### Exercise 2: Create a function that's triggered by an HTTP request
 
-#### Task 1: Create http-triggered function
+#### Task 1: Create an HTTP-triggered function
 
 1.  Access the **funclogic\*** function app that you created earlier in this lab.
 
@@ -130,7 +130,7 @@ In this exercise, you created all the resources that you'll use for this lab.
     using System.Net;
     ```
 
-1.  Create a new **public static** method named **Run** that returns a variable of type **IActionResult** and then that takes in variables of type **HttpRequest** and **ILogger** as parameters named **req** and **log**
+1.  Create a new **public static** method named **Run** that returns a variable of type **IActionResult** and that also takes in variables of type **HttpRequest** and **ILogger** as parameters named *req* and *log*:
 
     ```
     public static IActionResult Run(HttpRequest req, ILogger log)
@@ -150,66 +150,66 @@ In this exercise, you created all the resources that you'll use for this lab.
     return new OkObjectResult(req.Body);
     ```
 
-1.  **Save** the updated function script.
+1.  Save the updated function script.
 
-#### Task 3: Test function execution in the portal
+#### Task 3: Test function run in the portal
 
-1.  Select **Logs** to observe the compilation results. The results should include a **Compilation succeeded** message.
+1.  Select **Logs** to observe the compilation results. The results should include a "Compilation succeeded" message.
 
-1.  Select **Run** to perform a test of the function.
+1.  Select **Run** to test the function.
 
-1.  Observe the results of the test execution. The results should echo the original request body exactly.
+1.  Observe the results of the test run. The results should echo the original request body exactly.
 
-#### Task 4: Get base function URL
+#### Task 4: Get a base function URL
 
 1.  Access the **funclogic\*** function app that you created earlier in this lab.
 
-1.  Copy the value of the **URL** field. You will use this value later in the lab.
+1.  Copy the value of the **URL** text box. You'll use this value later in the lab.
 
-#### Task 5: Test function execution using httprepl
+#### Task 5: Test function run by using httprepl
 
-1.  Open the **Windows Terminal** application.
+1.  Open the Windows Terminal application.
 
-1.  Start the **httprepl** tool and set the base URI to the value of the **URL** you copied earlier in this lab.
+1.  Start the **httprepl** tool, and then set the base Uniform Resource Identifier (URI) to the **URL** value that you copied earlier in this lab.
 
     ```
     httprepl <function-app-url>
     ```
 
-    > **Note**: For example, if your **URL** is **https://funclogicstudent.azurewebsites.net**, your command would be **httprepl https://funclogicstudent.azurewebsites.net**.
+    > **Note**: For example, if your URL is **https://funclogicstudent.azurewebsites.net**, your command would be **httprepl https://funclogicstudent.azurewebsites.net**.
 
-1.  Within the tool prompt, navigate to the relative **api/echo** directory:
+1.  At the tool prompt, browse to the relative **api/echo** directory:
 
     ```
     cd api
     cd echo
     ```
 
-1.  Run the **post** command sending in a HTTP request body set to a numeric value of **3** using the **--content** option:
+1.  Run the **post** command sending in an HTTP request body set to a numeric value of **3** by using the **--content** option:
 
     ```
     post --content 3
     ```
 
-1.  Run the **post** command sending in a HTTP request body set to a numeric value of **5** using the **--content** option:
+1.  Run the **post** command sending in an HTTP request body set to a numeric value of **5** by using the **--content** option:
 
     ```
     post --content 5
     ```
 
-1.  Run the **post** command sending in a HTTP request body set to a string value of **"Hello"** using the **--content** option:
+1.  Run the **post** command sending in an HTTP request body set to a string value of **"Hello"** by using the **--content** option:
 
     ```
     post --content "Hello"
     ```
 
-1.  Run the **post** command sending in a HTTP request body set to a JSON value of **{"msg": "Successful"}** using the **--content** option:
+1.  Run the **post** command sending in an HTTP request body set to a JSON value of **{"msg": "Successful"}** by using the **--content** option:
 
     ```
     post --content "{"msg": "Successful"}"
     ```
 
-1.  Exit the **httprepl** applicaton:
+1.  Exit the **httprepl** application:
 
     ```
     exit
@@ -217,15 +217,15 @@ In this exercise, you created all the resources that you'll use for this lab.
 
 1.  Close the currently running Windows Terminal application.
 
-1.	Return to your browser window with the Azure portal.
+1.	Return to the browser window with the Azure portal.
 
 #### Review
 
-In this exercise, you created a basic function that echoes the content sent via a HTTP POST request.
+In this exercise, you created a basic function that echoes the content sent via an HTTP POST request.
 
-### Exercise 3: Create a function that is triggered on a schedule
+### Exercise 3: Create a function that triggers on a schedule
 
-#### Task 1: Create schedule-triggered function
+#### Task 1: Create a schedule-triggered function
 
 1.  Access the **funclogic\*** function app that you created earlier in this lab.
 
@@ -239,41 +239,39 @@ In this exercise, you created a basic function that echoes the content sent via 
 
     -	Schedule: **0 \* \* \* \* \***
 
-#### Task 2: Observe function executions
+#### Task 2: Observe function runs
 
-1.  In the function editor, **Save** the default function implementation.
+1.  In the function editor, save the default function implementation.
 
-1.  Select **Logs**.
+1.  Select **Logs**, and then observe the function run that occurs about every minute. Each function run should render a simple message to the log.
 
-1.  Observe the function execution that occurs approximately every **minute**. Each function execution should render a simple message to the log.
+#### Task 3: Update the function integration configuration
 
-#### Task 3: Update function integration configuration
-
-1.  Back in the **Function Apps** blade, expand the node for the **funclogic\*** function app that you created earlier in this lab and then expand the **Functions** and **Recurring** child nodes.
+1.  Back on the **Function Apps** blade, expand the node for the **funclogic\*** function app that you created earlier in this lab, and then expand the **Functions** and **Recurring** child nodes.
 
 1.  Under the **Recurring** node, select the **Integrate** node.
 
-1.  In the **Integrate** section, update the **Timer** configuration with the following values and **Save** the configuration changes:
+1.  In the **Integrate** section, update the **Timer** configuration with the following values, and then save the configuration changes:
 
     -   Schedule: **\*/30 \* \* \* \* \***
 
-#### Task 4: Observe function executions
+#### Task 4: Observe function runs
 
-1.  Back in the **Function Apps** blade, expand the node for the **funclogic\*** function app that you created earlier in this lab and then expand the **Functions** node.
+1.  Back on the **Function Apps** blade, expand the node for the **funclogic\*** function app that you created earlier in this lab, and then expand the **Functions** node.
 
 1.  Under the **Functions** node, select the **Recurring** node. 
 
 1.  In the function editor, select **Logs**.
 
-1.  Observe the function execution that now occurs approximately every **30 seconds**. Each function execution should render a simple message to the log.
+1.  Observe the function run that now occurs about every 30 seconds. Each function run should render a simple message to the log.
 
 #### Review
 
-In this exercise, you created a function that is executed automatically based on a fixed schedule.
+In this exercise, you created a function that runs automatically based on a fixed schedule.
 
 ### Exercise 4: Create a function that integrates with other services
 
-#### Task 1: Create HTTP-triggered function
+#### Task 1: Create an HTTP-triggered function
 
 1.  Access the **funclogic\*** function app that you created earlier in this lab.
 
@@ -303,11 +301,11 @@ In this exercise, you created a function that is executed automatically based on
 
     > **Note**: We recommend that you enable the **Overwrite if files already exist** option. 
 
-#### Task 3: Configure HTTP-triggered function
+#### Task 3: Configure an HTTP-triggered function
 
 1.  Access the **funclogic\*** function app that you created earlier in this lab.
 
-1.  In the **Function Apps** blade, expand the node for the **funclogic\*** function app that you created earlier in this lab and then expand the **Functions** and **GetSettingInfo** child nodes.
+1.  On the **Function Apps** blade, expand the node for the **funclogic\*** function app that you created earlier in this lab, and then expand the **Functions** and **GetSettingInfo** child nodes.
 
 1.  Under the **GetSettingInfo** node, select the **Integrate** node.
 
@@ -315,19 +313,19 @@ In this exercise, you created a function that is executed automatically based on
 
 1.  In the **Azure Blob Storage input** section, install the **Microsoft.Azure.WebJobs.Extensions.Storage** extension.
 
-    > **Note**: Wait for the function app to finish installing the extension before continuing with this lab. Installation can take 2-5 minutes.
+    > **Note**: Wait for the function app to finish installing the extension before continuing with this lab. Installation can take from 2 to 5 minutes.
 
-1.  Back in the **Azure Blob Storage input** section, configure the input with the following details and **Save** your configuration changes:
+1.  Back in the **Azure Blob Storage input** section, configure the input with the following details, and then save your configuration changes:
 
     -   Blob parameter name: **json**
 
     -   Path: **content/settings.json**
 
-    -   Storage account connection: **Azure WebJobsStorage**.
+    -   Storage account connection: **Azure WebJobsStorage**
 
-1.  Back in the **Integrate** section, select the existing **HTTP** trigger.
+1.  Back in the **Integrate** section, select the existing **HTTP trigger**.
 
-1.  Update the **HTTP trigger** with the following details and **Save** your configuration changes:
+1.  Update the **HTTP trigger** with the following details, and then save your configuration changes:
 
     -   Allowed HTTP methods: **Selected methods**
 
@@ -337,7 +335,7 @@ In this exercise, you created a function that is executed automatically based on
 
 #### Task 4: Write function code
 
-1.  From the **Function Apps** blade, expand the node for the **funclogic\*** function app that you created earlier in this lab and then expand the **Functions** node.
+1.  On the **Function Apps** blade, expand the node for the **funclogic\*** function app that you created earlier in this lab, and then expand the **Functions** node.
 
 1.  Under the **Functions** node, select the **GetSettingInfo** node. 
 
@@ -350,7 +348,7 @@ In this exercise, you created a function that is executed automatically based on
     using System.Net;
     ```
 
-1.  Create a new **public static** method named **Run** that returns a variable of type **IActionResult** and then that takes in variables of type **HttpRequest** and **string** as parameters named **request** and **json**
+1.  Create a new **public static** method named **Run** that returns a variable of type **IActionResult** and that also takes in variables of type **HttpRequest** and **string** as parameters named *request* and *json*:
 
     ```
     public static IActionResult Run(HttpRequest request, string json)
@@ -358,27 +356,27 @@ In this exercise, you created a function that is executed automatically based on
     }
     ```
 
-1.  Within the **Run** method, return the content of the **json** parameter as the HTTP response of the function:
+1.  Within the **Run** method, return the content of the *json* parameter as the HTTP response of the function:
 
     ```
     return new OkObjectResult(json);
     ```
 
-1.  **Save** the updated function script.
+1.  Save the updated function script.
 
-#### Task 5: Test function execution
+#### Task 5: Test function run
 
-1.  Open the **Windows Terminal** application.
+1.  Open the Windows Terminal application.
 
-1.  Start the **httprepl** tool and set the base URI to the value of the **URL** you copied earlier in this lab.
+1.  Start the **httprepl** tool, and then set the base URI to the URL value that you copied earlier in this lab.
 
     ```
     httprepl <function-app-url>
     ```
 
-    > **Note**: For example, if your **URL** is **https://funclogicstudent.azurewebsites.net**, your command would be **httprepl https://funclogicstudent.azurewebsites.net**.
+    > **Note**: For example, if your URL is **https://funclogicstudent.azurewebsites.net**, your command would be **httprepl https://funclogicstudent.azurewebsites.net**.
 
-1.  Within the tool prompt, navigate to the relative **api/getsettinginfo** endpoint:
+1.  At the tool prompt, browse to the relative **api/getsettinginfo** endpoint:
 
     ```
     cd api
@@ -393,7 +391,7 @@ In this exercise, you created a function that is executed automatically based on
 
 1.  Observe the JSON content of the response from the function app.
 
-1.  Exit the **httprepl** applicaton:
+1.  Exit the **httprepl** application:
 
     ```
     exit
@@ -401,11 +399,11 @@ In this exercise, you created a function that is executed automatically based on
 
 1.  Close the currently running Windows Terminal application.
 
-1.	Return to your browser window with the Azure portal.
+1.	Return to the browser window with the Azure portal.
 
 #### Review
 
-In this exercise, you created a function that returns the content of a JSON file in Azure Storage.
+In this exercise, you created a function that returns the content of a JSON file in Storage.
 
 ### Exercise 5: Clean up your subscription 
 
