--- a/Instructions/Labs/AZ-203_09_lab.md
+++ b/Instructions/Labs/AZ-203_09_lab.md
@@ -223,7 +223,7 @@ In this exercise, you built a basic workflow that starts when it is triggered by
 
 #### Task 4: Validate the end-to-end solution using httprepl
 
-1.  Open the **Windows Terminal** application.
+1.  Open the Windows Terminal application.
 
 1.  Start the **httprepl** tool and set the base URI to the value of the **Request URL** for the API operation that you copied earlier in this lab.
 
