--- a/Instructions/Labs/AZ-203_09_lab.md
+++ b/Instructions/Labs/AZ-203_09_lab.md
@@ -9,17 +9,17 @@ lab:
 
 ## Lab scenario
 
-Your organization keeps a collection of JSON files used to configure third-party products in an SMB file share in Azure. As part of a regular auditing practice, the ops team would like to call a simple HTTP endpoint and retrieve the current list of configuration files. You have decided to implement this functionality using a no-code solution based on Azure API Management and Logic Apps.
+Your organization keeps a collection of JSON files that it uses to configure third-party products in a Server Message Block (SMB) file share in Microsoft Azure. As part of a regular auditing practice, the ops team would like to call a simple HTTP endpoint and retrieve the current list of configuration files. You have decided to implement this functionality using a no-code solution based on Azure API Management service and Logic Apps.
 
 ## Objectives
 
 After you complete this lab, you will be able to:
 
--   Create a Logic App workflow
+-   Create a Logic App workflow.
 
--   Manage products and APIs in a Logic App
+-   Manage products and APIs in a Logic App.
 
--   Use Azure API Management as a proxy for a Logic App
+-   Use Azure API Management as a proxy for a Logic App.
 
 ## Lab setup
 
@@ -69,9 +69,9 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     -   Pricing tier: **Consumption (99.9 SLA, %)**
 
-    > **Note**: Wait for Azure to finish creating the API Management resource prior to moving forward with the lab. You will receive a notification when the resource is created.
+    > **Note**: Wait for Azure to finish creating the API Management resource prior to moving on in the lab. You will receive a notification when the resource is created.
 
-#### Task 3: Create a Logic Apps resource
+#### Task 3: Create a Logic App resource
 
 1. In the Azure portal, create a new **logic app** with the following details:
     
@@ -83,9 +83,9 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     - Log Analytics: **Off**
 
-    > **Note**: Wait for Azure to finish creating the Logic Apps resource prior to moving forward with the lab. You will receive a notification when the resource is created.
+    > **Note**: Wait for Azure to finish creating the Logic Apps resource prior to moving on in the lab. You will receive a notification when the resource is created.
 
-#### Task 4: Create a Storage account
+#### Task 4: Create a storage account
 
 1.  Create a new storage account with the following details:
     
@@ -103,7 +103,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     -   Access tier: **Hot**
 
-    > **Note**: Wait for Azure to finish creating the storage account before you move forward with the lab. You'll receive a notification when the account is created.
+    > **Note**: Wait for Azure to finish creating the storage account before you move on in the lab. You'll receive a notification when the account is created.
 
 #### Task 5: Upload sample content to file share in Azure Storage
 
@@ -113,11 +113,21 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
     
     -	Name: **metadata**
 
-    -	Quota: **1** (GiB)
+    -	Quota: **1** (GB) 
 
 1.  Select the recently created **metadata** share.
     
-1.  In the **metadata** share, select **Upload** to upload all five of the JSON files in the **Allfiles (F): \\Allfiles\\Labs\\09\\Starter** folder on your lab VM.
+1.  In the **metadata** share, select **Upload** to upload the following files in the **Allfiles (F): \\Allfiles\\Labs\\09\\Starter** folder on your lab VM.
+
+    -   **item_00.json**
+    
+    -   **item_01.json**
+    
+    -   **item_02.json**
+    
+    -   **item_03.json**
+    
+    -   **item_04.json** 
 
     > **Note**: We recommend that you enable the **Overwrite if files already exist** option.
 
@@ -129,7 +139,7 @@ In this exercise, you created all the resources that you'll use for this lab.
 
 1.  Access the **prodflow\*** logic app that you created earlier in this lab.
 
-1.  In the **Logic Apps Designer** blade, select the **Blank Logic App** template.
+1.  On the **Logic Apps Designer** blade, select the **Blank Logic App** template.
 
 1.  In the **Designer** area, add a new **When a HTTP request is received (Request)** trigger with the following details:
 
@@ -155,7 +165,7 @@ In this exercise, you created all the resources that you'll use for this lab.
 
     -   Map: **Name (List files)**
 
-#### Task 4: Build a HTTP response action
+#### Task 4: Build an HTTP response action
 
 1.  In the **Designer** area, add a new **Response (Request)** action with the following details:
     
@@ -167,7 +177,7 @@ In this exercise, you created all the resources that you'll use for this lab.
 
 #### Review
 
-In this exercise, you built a basic workflow that starts when it is triggered by a HTTP GET request, queries a storage service, enumerates the results, and then returns those results as a HTTP response.
+In this exercise, you built a basic workflow that starts when it's triggered by an HTTP GET request. It then queries a storage service, enumerates the results, and then returns those results as an HTTP response.
 
 ### Exercise 3: Use Azure API Management as a proxy for Logic Apps
 
@@ -183,7 +193,7 @@ In this exercise, you built a basic workflow that starts when it is triggered by
 
     -   Display name: **Free**
 
-    -   Id: **free**
+    -   Id: **free** 
 
     -   Description: **Free tier for anonymous use**
 
@@ -191,19 +201,19 @@ In this exercise, you built a basic workflow that starts when it is triggered by
 
     -   Requires subscription: **false**
 
-#### Task 2: Create API integrated with Logic Apps
+#### Task 2: Create an API integrated with Logic Apps
 
 1.  Navigate to the empty list of **APIs** for the account.
 
-1.  Create a new **Logic App** integrated API with the following details:
+1.  Create a new **Logic App**–integrated API with the following details:
 
-    -   Logic App: **Select the prodflow*yourname* Logic App you created earlier in this lab**
+    -   Logic App: **Select the prodflow*yourname Logic App you created earlier in this lab.**
     
     -   Display name: **Metadata Lookup**
 
     -   Name: **metadata-lookup**
 
-    -   Description: **Lookup metadata JSON files**
+    -   Description: **Look up metadata JSON files**
 
     -   Products: **Free**
 
@@ -211,11 +221,11 @@ In this exercise, you built a basic workflow that starts when it is triggered by
 
 1.  Navigate to the **Test** tab for the new API.
 
-1.  In the **Test** tab, perform the following actions:
+1.  On the **Test** tab, perform the following actions:
 
     1.  Select the single **GET** operation.
 
-    1.  Copy the value of the **Request URL** field. You will use this value later in the lab.
+    1.  Copy the value of the **Request URL** field. (You will use this value later in the lab.)
 
     1.  Perform a test request against the operation.
 
@@ -225,7 +235,7 @@ In this exercise, you built a basic workflow that starts when it is triggered by
 
 1.  Open the Windows Terminal application.
 
-1.  Start the **httprepl** tool and set the base URI to the value of the **Request URL** for the API operation that you copied earlier in this lab.
+1.  Start the **httprepl** tool, and set the base Uniform Resource Identifier (URI) to the value of the **Request URL** for the API operation that you copied earlier in this lab using the following example:
 
     ```
     httprepl <api-operation-request-url>
@@ -239,9 +249,9 @@ In this exercise, you built a basic workflow that starts when it is triggered by
     get
     ```
 
-1.  Observe the JSON content of the response from the function app.
+1.  Observe the JSON response content of the function app response.
 
-1.  Exit the **httprepl** applicaton:
+1.  Exit the **httprepl** application:
 
     ```
     exit
@@ -249,7 +259,7 @@ In this exercise, you built a basic workflow that starts when it is triggered by
 
 1.  Close the currently running Windows Terminal application.
 
-1.	Return to your browser window with the Azure portal.
+1.	Return to your browser window within  Azure portal.
 
 #### Review
 
@@ -257,11 +267,11 @@ In this exercise, you used Azure API Management as a proxy to trigger your Logic
 
 ### Exercise 4: Clean up your subscription
 
-#### Task 1: Open Cloud Shell and list resource groups
+#### Task 1: Open Azure Cloud Shell and list resource groups
 
 1.  In the Azure portal, select the **Cloud Shell** icon to open a new shell instance.
 
-1.  At the **Cloud Shell** command prompt in the portal, enter the following command, and then select Enter to list all resource groups in the subscription:
+1.  In the Azure portal, at the **Cloud Shell** command prompt, enter the following command, and then select Enter to list all resource groups in the subscription:
 
     ```
     az group list
@@ -281,7 +291,7 @@ In this exercise, you used Azure API Management as a proxy to trigger your Logic
     az group delete --name AutomatedWorkflow --no-wait --yes
     ```
 
-1.  Close the Cloud Shell pane in the portal.
+1.  Close the Cloud Shell pane.
 
 #### Task 3: Close the active applications
 
