--- a/Instructions/Labs/AZ-203_13_lab.md
+++ b/Instructions/Labs/AZ-203_13_lab.md
@@ -237,7 +237,13 @@ In this exercise, you registered the resource provider for Content Delivery Netw
 
 1.  Select the **Containers** link in the **Blob service** section, and then select the **media** container.
 
-1.  Upload the **campus.jpg**, **conference.jpg**, and **poster.jpg** files from the **Allfiles (F): \\Allfiles\\Labs\\13\\Starter** folder on your lab VM.
+1.  Upload the following files from the **Allfiles (F): \\Allfiles\\Labs\\13\\Starter** folder on your lab VM:
+
+    -   **campus.jpg**
+    
+    -   **conference.jpg**
+    
+    -   **poster.jpg**
 
     > **Note**: We recommend that you enable the **Overwrite if files already exist** option.
 
