Updated service references to use full names

--- a/Instructions/Labs/AZ-203_03_lab.md
+++ b/Instructions/Labs/AZ-203_03_lab.md
@@ -89,7 +89,7 @@ In this exercise, you created a new Storage account to use throughout the remain
 
 #### Task 1: Create storage account containers
 
-1.  Access the **mediastor\*** storage account that you created earlier in this lab.
+1.  Access the **mediastor*yourname*** storage account that you created earlier in this lab.
 
 1.  Select the **Containers** link in the **Blob service** section, and then create a new container with the following settings:
     
@@ -107,7 +107,7 @@ In this exercise, you created a new Storage account to use throughout the remain
 
 #### Task 2: Upload a storage account blob
 
-1.  Access the **mediastor\*** storage account that you created earlier in this lab.
+1.  Access the **mediastor*yourname*** storage account that you created earlier in this lab.
 
 1.  Select the **Containers** link in the **Blob service** section, and then select the recently created **raster-graphics** container.
     
@@ -380,7 +380,7 @@ In this exercise, you accessed existing containers by using the Storage SDK.
 
 #### Task 3: Upload a new blob by using the portal
 
-1.  Access the **mediastor\*** storage account that you created earlier in this lab.
+1.  Access the **mediastor*yourname*** storage account that you created earlier in this lab.
 
 1.  Select the **Containers** link in the **Blob service** section, and then select the newly created **vector-graphics** container.
     
