--- a/Instructions/Labs/AZ-203_04_lab.md
+++ b/Instructions/Labs/AZ-203_04_lab.md
@@ -127,7 +127,7 @@ In this exercise, you created all the Azure resources that you'll need for a pol
 
 #### Task 1: Upload image blobs
 
-1.  Go to the blade for the **polystor\*** Azure Storage account that you created earlier in this lab.
+1.  Go to the blade for the **polystor*yourname*** Azure Storage account that you created earlier in this lab.
 
 1.  Open the Containers pane, and then create a new container with the following settings:
 
@@ -149,7 +149,7 @@ In this exercise, you created all the Azure resources that you'll need for a pol
 
 #### Task 2: Upload an SQL .bacpac file
 
-1.  Go back to the blade for the **polystor\*** Azure Storage account, and then open the Containers pane again.
+1.  Go back to the blade for the **polystor*yourname*** Azure Storage account, and then open the Containers pane again.
 
 1.  Create a new container with the following settings:
 
@@ -165,7 +165,7 @@ In this exercise, you created all the Azure resources that you'll need for a pol
 
 #### Task 3: Import an SQL database
 
-1.  Go to the blade for the **polysqlsrvr\*** SQL server resource that you created earlier in this lab.
+1.  Go to the blade for the **polysqlsrvr*yourname*** SQL server resource that you created earlier in this lab.
 
 1.  Import the database from your Azure Storage account into the SQL server instance by using the following details:
 
@@ -183,7 +183,7 @@ In this exercise, you created all the Azure resources that you'll need for a pol
 
 #### Task 4: Use an imported SQL database
 
-1.  Go back to the blade for the **polysqlsrvr\*** SQL server resource.
+1.  Go back to the blade for the **polysqlsrvr*yourname*** SQL server resource.
 
 1.  Open the Firewalls and virtual networks pane.
 
@@ -486,7 +486,7 @@ In this exercise, you configured your ASP.NET web application to connect to your
 
 1.  Return to the **Microsoft Edge** browser window with the Azure portal.
 
-1.  Go to the blade for the **polycosmos\*** Azure Cosmos DB account that you created earlier in this lab.
+1.  Go to the blade for the **polycosmos*yourname*** Azure Cosmos DB account that you created earlier in this lab.
 
 1.  Open the Data Explorer pane.
 
