--- a/Instructions/Labs/AZ-203_06_lab.md
+++ b/Instructions/Labs/AZ-203_06_lab.md
@@ -125,7 +125,7 @@ In this exercise, you created all the resources that you'll use for this lab.
 
 #### Task 1: Configure a system-assigned managed service identity
 
-1.  Access the **securefunc\*** function app that you created earlier in this lab.
+1.  Access the **securefunc*yourname*** function app that you created earlier in this lab.
 
 1.  Browse to the **Identity** settings from the **Platform features** tab.
 
@@ -133,7 +133,7 @@ In this exercise, you created all the resources that you'll use for this lab.
 
 #### Task 2: Create a Key Vault secret
 
-1.  Access the **securevault\*** key vault that you created earlier in this lab.
+1.  Access the **securevault*yourname*** key vault that you created earlier in this lab.
 
 1.  Select the **Secrets** link in the **Settings** section.
 
@@ -153,7 +153,7 @@ In this exercise, you created all the resources that you'll use for this lab.
 
 #### Task 3: Configure a Key Vault access policy
 
-1.  Access the **securevault\*** key vault that you created earlier in this lab.
+1.  Access the **securevault*yourname*** key vault that you created earlier in this lab.
 
 1.  Browse to the **Access Policies** link in the **Settings** section.
 
@@ -179,7 +179,7 @@ In this exercise, you created a server-assigned managed service identity for you
 
 #### Task 1: Create a Key Vault-derived application setting 
 
-1.  Access the **securefunc\*** function app that you created earlier in this lab.
+1.  Access the **securefunc*yourname*** function app that you created earlier in this lab.
 
 1.  Browse to the **Configuration** settings from the **Platform features** tab.
 
@@ -197,7 +197,7 @@ In this exercise, you created a server-assigned managed service identity for you
 
 #### Task 2: Create an HTTP-triggered function
 
-1.  Access the **securefunc\*** function app that you created earlier in this lab.
+1.  Access the **securefunc*yourname*** function app that you created earlier in this lab.
 
 1.  Create a new function by using the following settings:
     
@@ -249,7 +249,7 @@ In this exercise, you used a service identity to read the value of a secret stor
 
 #### Task 1: Upload a sample Storage blob
 
-1.  Access the **securestor\*** storage account that you created earlier in this lab.
+1.  Access the **securestor*yourname*** storage account that you created earlier in this lab.
 
 1.  Select the **Containers** link in the **Blob service** section, and then create a new container with the following settings:
     
@@ -273,7 +273,7 @@ In this exercise, you used a service identity to read the value of a secret stor
 
 #### Task 2: Pull the storage account SDK from NuGet
 
-1.  Access the **securefunc\*** function app that you created earlier in this lab.
+1.  Access the **securefunc*yourname*** function app that you created earlier in this lab.
 
 1.  Open the editor for the **FileParser** function.
 
