--- a/Instructions/Labs/AZ-203_09_lab.md
+++ b/Instructions/Labs/AZ-203_09_lab.md
@@ -107,7 +107,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 #### Task 5: Upload sample content to file share in Azure Storage
 
-1.  Access the **prodstor\*** storage account that you created earlier in this lab.
+1.  Access the **prodstor*yourname*** storage account that you created earlier in this lab.
 
 1.  Select the **File shares** link in the **File service** section, and then create a new share with the following settings:
     
@@ -137,7 +137,7 @@ In this exercise, you created all the resources that you'll use for this lab.
 
 #### Task 1: Create a trigger for the workflow
 
-1.  Access the **prodflow\*** logic app that you created earlier in this lab.
+1.  Access the **prodflow*yourname*** logic app that you created earlier in this lab.
 
 1.  On the **Logic Apps Designer** blade, select the **Blank Logic App** template.
 
@@ -183,7 +183,7 @@ In this exercise, you built a basic workflow that starts when it's triggered by 
 
 #### Task 1: Create a new product
 
-1.  Access the **prodapim\*** API Management resource that you created earlier in this lab.
+1.  Access the **prodapim*yourname*** API Management resource that you created earlier in this lab.
 
 1.  Navigate to the empty list of **Products** for the new account.
 
