--- a/Instructions/Labs/AZ-203_08_lab.md
+++ b/Instructions/Labs/AZ-203_08_lab.md
@@ -81,15 +81,15 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 #### Task 3: Test the httpbin web application
 
-1.	Access the **httpapi\*** web app that you created earlier in this lab. 
+1.	Access the **httpapi*yourname*** web app that you created earlier in this lab. 
 
-1.  Open the **httpapi\*** web app in your browser.
+1.  Open the **httpapi*yourname*** web app in your browser.
 
 1.  Test the API by selecting the **Response formats** option, selecting **GET /xml**, selecting **Try it out**, and then finally by selecting **Execute**.
 
 1.  Observe the response from the HTTP request. Specifically, observe the content of the **Request URL**, **Response body**, and **Response headers** text boxes.
 
-1.  Return to the Azure portal and the **Web App** blade for the **httpapi\*** web app. 
+1.  Return to the Azure portal and the **Web App** blade for the **httpapi*yourname*** web app. 
 
 1.  Access the **Properties** section of the **Web App** blade.
 
@@ -117,7 +117,7 @@ In this exercise, you created a new Azure web app by using a container image sou
 
 #### Task 2: Define a new API
 
-1.  Access the **prodapi\*** API Management account that you created earlier in this lab.
+1.  Access the **prodapi*yourname*** API Management account that you created earlier in this lab.
 
 1.  Observe the list of **APIs** for the new account.
 
