--- a/Instructions/Labs/AZ-203_10_lab.md
+++ b/Instructions/Labs/AZ-203_10_lab.md
@@ -9,17 +9,17 @@ lab:
 
 ## Lab scenario
 
-Your company builds an HR system that is used by various customers around the world. While the system works fine today, your development managers have decided to begin rearchitecting the solution by decoupling application components. This decision was driven by a desire to make any future development simpler due to modularity. As the developer who handles component communication, you have decided to introduce Azure Event Grids as your solution-wide messaging platform.
+Your company builds a human resources (HR) system used by various customers around the world. While the system works fine today, your development managers have decided to begin re-architecting the solution by decoupling application components. This decision was driven by a desire to make any future development simpler through modularity. As the developer who manages component communication, you have decided to introduce Microsoft Azure Event Grid as your solution-wide messaging platform.
 
 ## Objectives
 
 After you complete this lab, you will be able to:
 
--   Create an Azure Event Grid topic
+-   Create an Event Grid topic.
 
--   Use the Azure Event Grid Viewer to subscribe to a topic and illustrate published messages
+-   Use the Azure Event Grid viewer to subscribe to a topic and illustrate published messages.
 
--   Publish a message from a .NET application
+-   Publish a message from a Microsoft .NET application.
 
 ## Lab setup
 
@@ -43,9 +43,9 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 -   Microsoft Edge
 
--   Visual Studio Code
+-   Microsoft Visual Studio Code
 
-### Exercise 1: Create Azure Resources
+### Exercise 1: Create Azure resources
 
 #### Task 1: Open the Azure portal
 
@@ -55,7 +55,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 #### Task 2: Open Azure Cloud Shell
 
-1.  Open a new Cloud Shell instance in the Azure portal.
+1.  Open a new Cloud Shell instance in the Azure portal. 
 
 1.  If Cloud Shell isn't already configured, configure the shell for Bash by using the default settings.
 
@@ -67,11 +67,11 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Use the **az provider** command with the **--help** flag to get a list of commands available for resource providers.
 
-1.  Use the **az provider list** command to list all currently registered providers.
+1.  Use the **az provider list** command to get a list of all currently registered providers.
 
 1.  Use the **az provider list** command again with the **--query "[].namespace"** flag to list just the namespaces of the currently registered providers.
 
-1.  Observe the list of currently registered providers. The **Microsoft.EventGrid** provider isn't currently in the list of providers.
+1.  Review the list of currently registered providers. Note that the **Microsoft.EventGrid** provider isn't currently in the list of providers.
 
 1.  Use the **az provider register** command with the **--help** flag to get the required flags to register a new provider.
 
@@ -93,9 +93,9 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     -   Event Schema: **Event Grid Schema**
   
-    > **Note**: Wait for Azure to finish creating the topic before you move forward with the lab. You'll receive a notification when the app is created.
+    > **Note**: Wait for Azure to finish creating the topic before you continue with the lab. You'll receive a notification when the app is created.
 
-#### Task 5: Deploy the Azure Event Grid Viewer to a Web App
+#### Task 5: Deploy the Azure Event Grid viewer to a web app
 
 1.  Create a new web app with the following details:
 
@@ -121,23 +121,23 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     -   Image and tag: **microsoftlearning/azure-event-grid-viewer:latest**
   
-    > **Note**: Wait for Azure to finish creating the web app before you move forward with the lab. You'll receive a notification when the app is created.
+    > **Note**: Wait for Azure to finish creating the web app before you continue with the lab. You'll receive a notification when the app is created.
 
 #### Review
 
-In this exercise, you created the Event Grid topic and Web App that you will use throughout the remainder of the lab.
+In this exercise, you created the Event Grid topic and web app that you will use throughout the remainder of the lab.
 
-### Exercise 2: Create Event Grid subscription
+### Exercise 2: Create an Event Grid subscription
 
-#### Task 1: Access Azure Event Grid Viewer web application
+#### Task 1: Access the Event Grid Viewer web application
 
 1.  Access the **eventviewer*yourname*** web app that you created earlier in this lab.
 
-1.  In the **Settings** section, go to the **Properties** section, and then record the value of the **URL** text box. You'll use this value later in the lab.
+1.  In the **Settings** section, go to the **Properties** section, and then record the value in the **URL** text box. You'll use this value later in the lab.
 
 1.  Browse to the currently running web app.
 
-1.  Observe the currently running **Azure Event Grid Viewer** web application. Leave this web application running for the remainder of the lab.
+1.  Observe the currently running **Azure Event Grid viewer** web application. Leave this web application running for the remainder of the lab.
 
     > **Note**: This web application will update in real-time as events are sent to its endpoint. We will use this to monitor events throughout the lab.
 
@@ -157,19 +157,19 @@ In this exercise, you created the Event Grid topic and Web App that you will use
 
     -   Endpoint: ***Web App URL recorded earlier in the lab*/api/updates**
 
-        > **Note**: For example, if your **Web App URL** value is **https://eventviewerstudent.azurewebsites.net/**, then your endpoint would be **https://eventviewerstudent.azurewebsites.net/api/updates**
+        > **Note**: For example, if your **Web App URL** value is **https://eventviewerstudent.azurewebsites.net/**, then your endpoint would be **https://eventviewerstudent.azurewebsites.net/api/updates**.
   
-    > **Note**: Wait for Azure to finish creating the subscription before you move forward with the lab. You'll receive a notification when the app is created.
+    > **Note**: Wait for Azure to finish creating the subscription before you continue with the lab. You'll receive a notification when the app is created.
 
-#### Task 3: View subscription validation event
+#### Task 3: Observe the subscription validation event
 
-1.  Return to **Azure Event Grid Viewer** web application.
+1.  Return to Azure Event Grid viewer.
 
-1.  Observe the **Microsoft.EventGrid.SubscriptionValidationEvent** event that was created as part of the subscription creation process.
+1.  Review the **Microsoft.EventGrid.SubscriptionValidationEvent** event that was created as part of the subscription creation process.
 
-1.  Select the event and observe the JSON content of the event.
+1.  Select the event and review its JSON content.
 
-1.  Return to the Azure portal.
+1.  Return to Azure portal.
 
 #### Task 4: Record subscription credentials
 
@@ -177,11 +177,11 @@ In this exercise, you created the Event Grid topic and Web App that you will use
 
 1.  Record the value of the **Topic Endpoint** field. You'll use this value later in the lab.
 
-1.  In the **Settings** section, go to the **Access keys** section, and then record the value of the **Key 1** text box. You'll use this value later in the lab.
+1.  In the **Settings** section, go to the **Access keys** section, and then record the value in the **Key 1** text box. You'll use this value later in the lab.
 
 #### Review
 
-In this exercise, you created a new subscription, validated its registration and then recorded the credentials required to publish a new event to the topic.
+In this exercise, you created a new subscription, validated its registration, and then recorded the credentials required to publish a new event to the topic.
 
 ### Exercise 3: Publish Event Grid events from .NET
 
@@ -227,7 +227,7 @@ In this exercise, you created a new subscription, validated its registration and
 
 1.  Delete all existing code in the **Program.cs** file.
 
-1.  Add the following **using** directives for libraries that will be referenced by the application:
+1.  Add the following **using** directives for libraries that the application will reference:
 
     ```
     using Bogus;
@@ -267,13 +267,13 @@ In this exercise, you created a new subscription, validated its registration and
         EventGridClient client = new EventGridClient(credentials);
         ```
     
-    1.  Create a new variable named **events** of type **List<EventGridEvent>**.
+    1.  Create a new variable named **events**, of type **List<EventGridEvent>**:
 
         ```
         List<EventGridEvent> events = new List<EventGridEvent>();
         ```
 
-    1.  Add the following block of code to create a new variable named **firstPerson** of type **Person**, create a new variable named **firstEvent** of type **EventGridEvent**, populate the **EventGridEvent** variable with sample data and then add the **firstEvent** instance to your **events** list:
+    1.  Add the following block of code to: create two new variables named **firstPerson** of type **Person**, and **firstEvent** of type **EventGridEvent**; populate the **EventGridEvent** variable with sample data; and add the **firstEvent** instance to your **events** list:
 
         ```
         Person firstPerson = new Person();
@@ -289,7 +289,7 @@ In this exercise, you created a new subscription, validated its registration and
         events.Add(firstEvent);
         ```
 
-    1.  Add the following block of code to create a new variable named **secondPerson** of type **Person**, create a new variable named **secondEvent** of type **EventGridEvent**, populate the **EventGridEvent** variable with sample data and then add the **secondEvent** instance to your **events** list:
+    1.  Add the following block of code to: create two new variables named **secondPerson** of type **Person**, and **secondEvent** of type **EventGridEvent**; populate the **EventGridEvent** variable with sample data; and add the **secondEvent** instance to your **events** list:
 
         ```
         Person secondPerson = new Person();
@@ -305,7 +305,7 @@ In this exercise, you created a new subscription, validated its registration and
         events.Add(secondEvent);
         ```
 
-    1.  Add the following block of code to obtain the **Hostname** from the **topicEndpoint** variable and then use that hostname as a parameter to the **[EventGridClient.PublishEventsAsync](https://docs.microsoft.com/dotnet/api/microsoft.azure.eventgrid.eventgridclient.publisheventswithhttpmessagesasync)** method invocation:
+    1.  Add the following block of code to obtain the **Hostname** from the **topicEndpoint** variable, and then use that hostname as a parameter to the **[EventGridClient.PublishEventsAsync](https://docs.microsoft.com/dotnet/api/microsoft.azure.eventgrid.eventgridclient.publisheventswithhttpmessagesasync)** method invocation:
 
         ```
         string topicHostname = new Uri(topicEndpoint).Host;
@@ -320,7 +320,7 @@ In this exercise, you created a new subscription, validated its registration and
 
 1.  Save the **Program.cs** file.
 
-1.  Using a terminal, run the ASP.NET web application project:
+1.  Using a terminal, run the Microsoft ASP.NET web application project:
 
     ```
     dotnet run
@@ -328,19 +328,19 @@ In this exercise, you created a new subscription, validated its registration and
 
     > **Note**: If there are any build errors, review the **Program.cs** file in the **Allfiles (F):\\Allfiles\\Labs\\10\\Solution\\EventPublisher** folder.
 
-1.  Observe the success message output from the currently running console application.
+1.  Review the success message output from the currently running console application.
 
 1.  Close the current terminal.
 
-#### Task 4: View published events
+#### Task 4: Observe published events
 
-1.  Return to **Azure Event Grid Viewer** web application.
+1.  Return to the browser window with the **Azure Event Grid viewer** web application.
 
-1.  Observe the **Employees.Registration.New** events that were created by your console application.
+1.  Review the **Employees.Registration.New** events that were created by your console application.
 
-1.  Select any of the events and observe the JSON content of that specific event.
+1.  Select any of the events and review its JSON content.
 
-1.  Return to the Azure portal.
+1.  Return to  Azure portal.
 
 #### Review
 
@@ -374,7 +374,7 @@ In this exercise, you published new events to your Event Grid topic using a .NET
     az group delete --name PubSubEvents --no-wait --yes
     ```
     
-1.  Close the Cloud Shell pane in the portal.
+1.  Close the Cloud Shell pane.
 
 #### Task 3: Close the active applications
 
